<resources>
    <string name="app_name">Simple News</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="show_news_list">Show News List</string>
    <string name="politics">时政</string>
    <string name="international">国际</string>
    <string name="finance">金融</string>
    <string name="collection">收藏</string>
    <string name="profile">我</string>
    <string name="login">Login</string>
    <string name="join_in_5">跳过5</string>
    <string name="username">用户名：</string>
    <string name="profile_words">I love you</string>
    <string name="profile_gender">性别：</string>
    <string name="profile_phone">电话:</string>
    <string name="profile_email">邮箱：</string>
    <string name="profile_into">兴趣爱好：</string>
    <string name="profile_save">保存</string>
    <string name="tips_badge_removed">Badge Removed</string>
    <string name="news_description">News Description</string>
    <string name="news_title">News Title</string>
</resources>
