<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/profile_background"
    android:orientation="vertical">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:background="@drawable/profile_head"
        android:src="@drawable/avatar" />

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img3"
            android:layout_width="30dp"
            android:layout_height="match_parent"

            android:src="@drawable/android_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/username"
            android:textSize="30sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/profile_words"
            android:textSize="25sp" />
    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img4"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:src="@drawable/android_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/profile_gender"
            android:textSize="30sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/profile_words"
            android:textSize="25sp" />
    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/im5"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:src="@drawable/android_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/profile_phone"
            android:textSize="30sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/profile_words"
            android:textSize="25sp" />
    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img6"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:src="@drawable/android_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/profile_email"
            android:textSize="30sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/profile_words"
            android:textSize="25sp" />
    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img7"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:src="@drawable/android_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/profile_into"
            android:textSize="30sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/profile_words"
            android:textSize="25sp" />
    </android.support.v7.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_save" />
</LinearLayout>
